Fixed feed overflow.

--- a/WeLearn.Fe/pwa/styles/globals.css
+++ b/WeLearn.Fe/pwa/styles/globals.css
@@ -20,6 +20,7 @@ a {
 }
 
 .external-image {
-  max-width: 500px;
+  max-width: 100%;
+  height: auto;
   margin-top: 1rem;
 }
